All works with document reception finished Design done TODO: Signing process

--- a/Signer/App.config
+++ b/Signer/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Signer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <Signer.Properties.Settings>
+            <setting name="getFileUri" serializeAs="String">
+                <value>https://corp.gsen.ru/unisign/api_unisign/server_result.xml</value>
+            </setting>
+            <setting name="serverCertificateThumbprint" serializeAs="String">
+                <value>8D6079A1AC1215F2E92AA86A5C897C48E15B5782</value>
+            </setting>
+        </Signer.Properties.Settings>
+    </applicationSettings>
 </configuration>
