+ private config checking logic + certificate checking logic + menus for cer &&  bin config loading + logic for public config && cert references update

--- a/Signer/App.config
+++ b/Signer/App.config
@@ -16,6 +16,9 @@
             <setting name="serverCertificateThumbprint" serializeAs="String">
                 <value>8D6079A1AC1215F2E92AA86A5C897C48E15B5782</value>
             </setting>
+            <setting name="publicCfgPath" serializeAs="String">
+                <value>config.xml</value>
+            </setting>
         </Signer.Properties.Settings>
     </applicationSettings>
 </configuration>
