--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B4F07FD5-9153-4236-AAFB-2FBE6798116F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Signer</RootNamespace>
-    <AssemblyName>Signer</AssemblyName>
+    <RootNamespace>UniSign</RootNamespace>
+    <AssemblyName>UniSign</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
