+ interop certificate store saved to config + XmlBuilder class for signed xml messages construction

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -91,6 +91,7 @@
     <Compile Include="CoreModules\BrowserBehavior.cs" />
     <Compile Include="CoreModules\Converters.cs" />
     <Compile Include="CoreModules\SignatureProcessor.cs" />
+    <Compile Include="CoreModules\XmlBuilder.cs" />
     <Compile Include="DataModel\Enums\SignatureType.cs" />
     <Compile Include="DataModel\SignatureInfo.cs" />
     <Compile Include="DataModel\SigningSession.cs" />
