+ detached signature implementation version 1.1.0

--- a/UniSign/App.config
+++ b/UniSign/App.config
@@ -2,14 +2,23 @@
 <configuration>
 	<configSections>	
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-			<section name="Signer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+			<section name="UniSign.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+   <section name="Signer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
 	<startup> 
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
 	</startup>
 	<applicationSettings>
-		<Signer.Properties.Settings>
+		<UniSign.Properties.Settings>
+   <setting name="publicCfgPath" serializeAs="String">
+    <value>config.xml</value>
+   </setting>
+   <setting name="privateConfigUnlockKey" serializeAs="String">
+    <value>123</value>
+   </setting>
+  </UniSign.Properties.Settings>
+  <Signer.Properties.Settings>
 			<setting name="getFileUri" serializeAs="String">
 				<value>https://corp.gsen.ru/unisign/api_unisign/server_result.xml</value>
 			</setting>
