Config decryption logic moved to separate dll

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -71,6 +71,9 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="utility">
+      <HintPath>..\utility\bin\Debug\utility.dll</HintPath>
+    </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
