Removed signature check on private .cbin config XML content All _viewModel config actions (for main menu items) now reload config + strong name signing

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -40,6 +40,12 @@
   <PropertyGroup>
     <ApplicationIcon>ink%28256%29.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>TS.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CryptoPro.Sharpei.Base, Version=1.4.0.10, Culture=neutral, PublicKeyToken=473b8c5086e795f5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -129,6 +135,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="TS.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
