7z_32.dll renamed -> inc.dll

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -142,7 +142,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="7z_32.dll">
+    <Content Include="inc.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="config.xml">
