post build event debugged && obfuscation project updated

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -46,6 +46,9 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>TS.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CryptoPro.Sharpei.Base, Version=1.4.0.10, Culture=neutral, PublicKeyToken=473b8c5086e795f5, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -159,9 +162,8 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>:: "c:\Program Files\Red Gate\SmartAssembly 6\SmartAssembly.com" /build $(ProjectDir)Obfuscation\utility.saproj
-:: del $(TargetDir)utility.dll
-:: del $(TargetDir)SevenZipSharp.dll
-:: xcopy $(ProjectDir)Obfuscation\utility.dll $(TargetDir)utility.dll /y</PostBuildEvent>
+::del $(TargetDir)SevenZipSharp.dll
+::xcopy $(ProjectDir)Obfuscation\utility.dll $(TargetDir)utility.dll /y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
