--- a/UniSign/App.config
+++ b/UniSign/App.config
@@ -3,7 +3,7 @@
 	<configSections>	
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
 			<section name="UniSign.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
-   <section name="Signer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+			<section name="Signer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
 	<startup> 
@@ -11,23 +11,13 @@
 	</startup>
 	<applicationSettings>
 		<UniSign.Properties.Settings>
-   <setting name="publicCfgPath" serializeAs="String">
-	<value>config.xml</value>
-   </setting>
-   <setting name="privateConfigUnlockKey" serializeAs="String">
-	<value>123</value>
-   </setting>
-  </UniSign.Properties.Settings>
-  <Signer.Properties.Settings>
-			<setting name="getFileUri" serializeAs="String">
-				<value>https://corp.gsen.ru/unisign/api_unisign/server_result.xml</value>
-			</setting>
-			<setting name="serverCertificateThumbprint" serializeAs="String">
-				<value>8D6079A1AC1215F2E92AA86A5C897C48E15B5782</value>
-			</setting>
-			<setting name="publicCfgPath" serializeAs="String">
+		   <setting name="publicCfgPath" serializeAs="String">
 				<value>config.xml</value>
-			</setting>
-		</Signer.Properties.Settings>
+		   </setting>
+		</UniSign.Properties.Settings>
 	</applicationSettings>
+	<appSettings>
+		<add key="7zLocation" value="inc.dll"/>
+		<!--<add key="7zLocation" value="inc_64.dll"/>-->
+	</appSettings>
 </configuration>
