--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -25,7 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,7 +35,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -50,7 +50,7 @@
     <AssemblyOriginatorKeyFile>TS.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CryptoPro.Sharpei.Base, Version=1.4.0.10, Culture=neutral, PublicKeyToken=473b8c5086e795f5, processorArchitecture=MSIL">
@@ -70,6 +70,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
@@ -148,9 +149,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="7z.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="inc.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -162,6 +160,9 @@
     <None Include="private_config.cbin" />
     <Resource Include="ink%28256%29.ico" />
     <Resource Include="pen%2848%29.ico" />
+    <Content Include="inc_64.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="TestPage.html" />
   </ItemGroup>
   <ItemGroup />
@@ -170,9 +171,9 @@
     <PostBuildEvent>::Debug_version
 ::"c:\Program Files\Red Gate\SmartAssembly 6\SmartAssembly.com" /build $(ProjectDir)Obfuscation\utility.saproj
 ::Release version
-::"c:\Program Files\Red Gate\SmartAssembly 6\SmartAssembly.com" /build $(ProjectDir)Obfuscation\utility_release.saproj
-::del $(TargetDir)SevenZipSharp.dll
-::xcopy $(ProjectDir)Obfuscation\utility.dll $(TargetDir)utility.dll /y</PostBuildEvent>
+"c:\Program Files\Red Gate\SmartAssembly 6\SmartAssembly.com" /build $(ProjectDir)Obfuscation\utility_release.saproj
+del $(TargetDir)SevenZipSharp.dll
+xcopy $(ProjectDir)Obfuscation\utility.dll $(TargetDir)utility.dll /y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
