+ Shortcuts in main menu + 7zip_x64 == inc_64.dll + 7zip_x64 will be loaded if 7zip_x32 fails

--- a/UniSign/App.config
+++ b/UniSign/App.config
@@ -17,7 +17,7 @@
 		</UniSign.Properties.Settings>
 	</applicationSettings>
 	<appSettings>
-		<add key="7zLocation" value="inc.dll"/>
+		<!--<add key="7zLocation" value="inc.dll"/>-->
 		<!--<add key="7zLocation" value="inc_64.dll"/>-->
 	</appSettings>
 </configuration>
