private config now contains SSL crtificate thumbprint + error message when SSL cert is not validated + conditional compilation to signature generator - my cryptopriovider is fucked up

--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -152,7 +152,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="config.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Resource Include="XmlTemplates\SignedDataRequest.xml" />
     <Resource Include="XmlTemplates\SessionRequest.xml" />
