^ changed signing certificate for assemblies && obfuscation ^ setup now searches for Crypto-PRO CSP 3.6 || 3.9

--- a/utility/utility.csproj
+++ b/utility/utility.csproj
@@ -33,7 +33,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>TS.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>signcert.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <DelaySign>false</DelaySign>
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="TS.pfx" />
+    <None Include="signcert.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
