--- a/UniSign/UniSign.csproj
+++ b/UniSign/UniSign.csproj
@@ -47,7 +47,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>TS.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>signcert.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -141,7 +141,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="TS.pfx" />
+    <None Include="signcert.snk" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
