* разрешено продолжать инсталляцию без установки дополнительных компонент

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Unisign-cache/
 /UniSign/Obfuscation/utility.dll
 /!_Installer/Unisign_beta-cache
 /!_Installer/Setup
+/!_Installer/Unisign_beta_no_prereqs-cache
